--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,14 +2,15 @@ server.port=8081
 spring.application.name=mcp-weather
 spring.ai.mcp.server.name=weather-server
 spring.ai.mcp.server.version=0.0.1
-spring.main.web-application-type=SERVLET
+spring.main.web-application-type=REACTIVE
+spring.ai.mcp.server.type=ASYNC
 
 # Logging
 logging.level.io.modelcontextprotocol=DEBUG
 logging.level.org.springframework.ai=DEBUG
 
 spring.ai.mcp.client.toolcallback.enabled=true
-transport.mode=servlet
+transport.mode=sse
 
 # Enable the MCP server
 spring.ai.mcp.server.sse-endpoint=sse
